letter-spacing in body and correct button portfolio
Выносим свойство letter-spacing со значением 0,03 в боди, корректируем свойства кнопок секции портфолио, которые не были унаследованы от боди

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
     color: var(--color-text);
 
     font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.03em;
 }
 /* Убираем точки у списков */
 .list {
@@ -66,7 +67,6 @@ span {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    letter-spacing: 0.03em;
 }
 /* Секция Герой */
 .hero {
@@ -95,13 +95,11 @@ span {
     color: var(--color-title);
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 .skill-list .text {
   font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;  
+  line-height: 1.71;  
 }
 
 /* Чем мы занимаемся */
@@ -113,22 +111,22 @@ span {
     color: var(--color-title);
     font-weight: 500;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     text-align: center;
 }
 .team-list .text {
     line-height: 1.19;
-    letter-spacing: 0.03em;
     text-align: center;
 }
 /* Список кнопок для портфолио*/
 .button-grey {
     color: var(--color-title);
     background-color: var(--color-button-team);
+    font-family: inherit;
+    font-size: inherit;
     font-weight: 500;
     line-height: 1.63;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: inherit;
     cursor: pointer;
 }
 
@@ -149,7 +147,6 @@ span {
 }
 .portfolio-list .text {
     line-height: 1.88;
-    letter-spacing: 0.03em;
 }
 
 /* Кнопки */
@@ -169,13 +166,11 @@ span {
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
 }
 .address .link {
     color: var(--color-footer-telefon);
     font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     text-decoration: none;
 }
 .address .link:hover,
